--- a/frontend/src/app/modules/admin/user/user-list/user-list.component.html
+++ b/frontend/src/app/modules/admin/user/user-list/user-list.component.html
@@ -1,10 +1,18 @@
 <div class="row grid-margin">
     <div class="col-12 stretch-card">
         <div class="card">
-            <div class="card-body">
+           <div class="card-body">
                 <div class="row">
-                    <div class="col-10">
-                        <h6 class="card-title">Gestión de Usuarios</h6>
+                    <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin">
+                        <div>
+                          <h4 class="mb-3 mb-md-0">Gestión de usuarios</h4>
+                        </div>
+                        <div class="d-flex align-items-center flex-wrap text-nowrap">
+                          <button type="button" (click)="newUser()" class="btn btn-primary btn-icon-text mb-2 mb-md-0">
+                            <i class="btn-icon-prepend" data-feather="plus" appFeatherIcon></i>
+                            Nuevo usuario
+                          </button>
+                        </div>
                     </div>
                 </div>
                 <div class="table-responsive">
@@ -21,6 +29,7 @@
                         <tbody></tbody>
                     </table>
                 </div>
+                <button class="btn btn-light">Cancelar</button>
             </div>
         </div>
     </div>
