Calendar / Reservation development progress

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -25,7 +25,7 @@
 @import '~@swimlane/ngx-datatable/index.css';
 @import '~@swimlane/ngx-datatable/themes/bootstrap.css';
 @import '~@swimlane/ngx-datatable/assets/icons.css';
-
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
 // NobleUI styles for LTR
 @import "./assets/scss/style";
