--- a/frontend/src/app/modules/reserves/reserve-detail/reserve-detail.component.html
+++ b/frontend/src/app/modules/reserves/reserve-detail/reserve-detail.component.html
@@ -5,16 +5,111 @@
                 <div class="card-body">
                     <h6 class="card-title">Detalle de reserva</h6>
                     <div class="form-group row mb-3">                            
-                        <label for="txtId" class="col-sm-3 col-form-label">Identificación:
-                            <span class="text-danger form-check-inline" *ngIf="txtIdReq?.errors?.required"> *</span>
+                        <label for="txtReservationGroupId" class="col-sm-3 col-form-label">Grupo:
+                            <span class="text-danger form-check-inline" *ngIf="txtReservationGroupId?.errors?.required"> *</span>
                         </label>
-                            <div class="col-sm-9">
-                            <ngb-timepicker [(ngModel)]="reserve.beginDateTime"></ngb-timepicker>
-                            <input type="datetime" class="form-control" id="txtId" placeholder="Fecha de inicio" name="txtId"
-                            [(ngModel)]="reserve.beginDateTime" #txtIdReq="ngModel" [disabled]="isUpdate">
+                        <div class="col-sm-9">
+                        <input type="text" class="form-control" id="txtReservationGroupId" autocomplete="off" placeholder="Identificador de grupo" name="txtReservationGroupId"
+                                [(ngModel)]="reservation.groupId" #txtReservationGroupId="ngModel" required maxlength="30">
                         </div>
                     </div>
-                    
+                    <div class="form-group row mb-3"> 
+                        <div class="col col-sm-6">
+                            <label for="selBeginDate" class="col-sm-12 col-form-label">Fecha de inicio:</label>
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <input
+                                        class="form-control"
+                                        placeholder="yyyy-mm-dd"
+                                        name="selBeginDate"
+                                        [(ngModel)]="reservation.beginDate"
+                                        ngbDatepicker
+                                        #d="ngbDatepicker"
+                                    />
+                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-sm-6">
+                            <label for="selEndDate" class="col-sm-12 col-form-label">Fecha de fin:</label>
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <input
+                                        class="form-control"
+                                        placeholder="yyyy-mm-dd"
+                                        name="selEndDate"
+                                        [(ngModel)]="reservation.endDate"
+                                        ngbDatepicker
+                                        #c="ngbDatepicker"
+                                    />
+                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="c.toggle()" type="button"></button>
+                                </div>
+                            </div>
+                        </div>                     
+                    </div>
+                    <div class="form-group row mb-3">       
+                        <div class="col col-sm-6">
+                            <label for="selBeginTime" class="col-sm-12 col-form-label">Hora de inicio:</label>
+                            <div class="col-sm-9">
+                                <ngb-timepicker id="selBeginTime" [(ngModel)]="reservation.beginDateTime" name="selBeginTime"></ngb-timepicker>
+                            </div>
+                        </div>
+                        <div class="col col-sm-6">
+                            <label for="selEndTime" class="col-sm-12 col-form-label">Hora de fin:</label>
+                            <div class="col-sm-9">
+                                <ngb-timepicker id="selEndTime" [(ngModel)]="reservation.endDateTime" name="selEndTime"></ngb-timepicker>
+                            </div>
+                        </div>                     
+                    </div>
+                    <div class="form-group row mb-3">                            
+                        <label for="txtMotive" class="col-sm-3 col-form-label">Motivo:
+                            <span class="text-danger form-check-inline" *ngIf="txtMotive?.errors?.required"> *</span>
+                        </label>
+                        <div class="col-sm-9">
+                        <input type="text" class="form-control" id="txtMotive" autocomplete="off" placeholder="Motivo" name="txtMotive"
+                                [(ngModel)]="reservation.motive" #txtMotive="ngModel" required maxlength="30">
+                        </div>
+                    </div>
+                    <div class="form-group row mb-3">                            
+                        <label for="selApprovalState" class="col-sm-3 col-form-label">Estado:
+                        </label>
+                            <div class="col-sm-9">
+                                <ng-select 
+                                [items]="approvalStatus"
+                                id="selApprovalState"
+                                bindLabel="value"
+                                bindValue="key"
+                                placeholder="type to search"
+                                [(ngModel)]="approvalStatus">
+                            </ng-select>
+                        </div>
+                    </div>
+                    <div class="form-group row mb-3">                            
+                        <label for="txtNotes" class="col-sm-3 col-form-label">Notas:
+                            <span class="text-danger form-check-inline" *ngIf="txtNotes?.errors?.required"> *</span>
+                        </label>
+                        <div class="col-sm-9">
+                        <input type="text" class="form-control" id="txtNotes" autocomplete="off" placeholder="Notas" name="txtNotes"
+                                [(ngModel)]="reservation.motive" #txtNotes="ngModel" required maxlength="120">
+                        </div>
+                    </div>
+                    <div class="form-group row mb-3">                            
+                        <label for="selRoom" class="col-sm-3 col-form-label">Salas:
+                        </label>
+                            <div class="col-sm-9">
+                                <ng-select 
+                                [items]="rooms"
+                                id="selRoom"
+                                bindLabel="value"
+                                bindValue="key"
+                                placeholder="type to search"
+                                [(ngModel)]="rooms">
+                            </ng-select>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary mr-2  me-2 float-left">{{ isUpdate ? "Actualizar" : "Guardar" }}</button>
+                    <button class="btn btn-light mr-2  me-2" >Cancelar</button>
                     <!--<button class="btn btn-primary mr-2  me-2 float-left" [disabled]="txtIdReq?.errors?.required ||
                                                                      txtMiddleNameReq?.errors?.required || txtLastNameReq?.errors?.required ||
                                                                      txtUnidadAcademicaReq?.errors?.required || txtPhoneReq?.errors?.required"
