--- a/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-8 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h6 class="card-title">Datos de Disponibilidad de Salón</h6>
+                    <h6 class="card-title">Datos de Disponibilidad de Sala</h6>
                     <div class="form-group row mb-3">                            
                         <label for="txtMinReservationTime" class="col-sm-3 col-form-label">Tiempo mínimo de reserva:
                             <span class="text-danger form-check-inline" *ngIf="txtMinReservationTimeReq?.errors?.required"> *</span>
