--- a/frontend/src/app/modules/admin/room/room-detail/room-detail.component.html
+++ b/frontend/src/app/modules/admin/room/room-detail/room-detail.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-8 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h6 class="card-title">Datos del Salón</h6>
+                    <h6 class="card-title">Datos del Sala</h6>
                     <div class="form-group row mb-3">                            
                         <label for="txtCode" class="col-sm-3 col-form-label">Código:
                             <span class="text-danger form-check-inline" *ngIf="txtCodeReq?.errors?.required"> *</span>
@@ -61,7 +61,7 @@
                         <div class="col-sm-9">
                             <input type="checkbox" class="form-check-input" id="chkState" [(ngModel)]="room.state">
                             <label class="form-check-label" for="chkState">
-                              Activo
+                              &nbsp;Activo
                             </label>
                         </div>
                     </div>
