--- a/frontend/src/app/modules/admin/room/room-list/room-list.component.html
+++ b/frontend/src/app/modules/admin/room/room-list/room-list.component.html
@@ -5,12 +5,12 @@
                 <div class="row">
                     <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin">
                         <div>
-                          <h4 class="mb-3 mb-md-0">Gestión de Salones</h4>
+                          <h4 class="mb-3 mb-md-0">Gestión de Salas</h4>
                         </div>
                         <div class="d-flex align-items-center flex-wrap text-nowrap">
                           <button type="button" (click)="new()" class="btn btn-primary btn-icon-text mb-2 mb-md-0">
                             <i class="btn-icon-prepend" data-feather="plus" appFeatherIcon></i>
-                            Nuevo Salón
+                            Nueva Sala
                           </button>
                         </div>
                     </div>
