--- a/frontend/src/app/modules/admin/resource/resource-list/resource-list.component.html
+++ b/frontend/src/app/modules/admin/resource/resource-list/resource-list.component.html
@@ -1,1 +1,34 @@
-<p>resource-list works!</p>
+<div class="row grid-margin">
+    <div class="col-12 stretch-card">
+        <div class="card">
+           <div class="card-body">
+                <div class="row">
+                    <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin">
+                        <div>
+                          <h4 class="mb-3 mb-md-0">Gestión de Recursos</h4>
+                        </div>
+                        <div class="d-flex align-items-center flex-wrap text-nowrap">
+                          <button type="button" (click)="new()" class="btn btn-primary btn-icon-text mb-2 mb-md-0">
+                            <i class="btn-icon-prepend" data-feather="plus" appFeatherIcon></i>
+                            Nuevo Recurso
+                          </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <table id="resourcesDataTable" class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Nombre</th>
+                            <th>Descripción</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
