--- a/frontend/src/app/modules/reservation/reservation-detail/reserve-detail.component.html
+++ b/frontend/src/app/modules/reservation/reservation-detail/reserve-detail.component.html
@@ -4,29 +4,27 @@
             <div class="card">
                 <div class="card-body">
                     <h6 class="card-title">Detalle de reserva</h6>
-                    <div class="form-group row mb-3">                            
+                    <div class="form-group row mb-3">
                         <label for="txtReservationGroupId" class="col-sm-3 col-form-label">Grupo:
-                            <span class="text-danger form-check-inline" *ngIf="txtReservationGroupId?.errors?.required"> *</span>
+                            <span class="text-danger form-check-inline" *ngIf="txtReservationGroupId?.errors?.required">
+                                *</span>
                         </label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="txtReservationGroupId" autocomplete="off" placeholder="Identificador de grupo" name="txtReservationGroupId"
-                                [(ngModel)]="reservation.groupId" #txtReservationGroupId="ngModel" required maxlength="30">
+                            <input type="text" class="form-control" id="txtReservationGroupId" autocomplete="off"
+                                placeholder="Identificador de grupo" name="txtReservationGroupId"
+                                [(ngModel)]=reservation.groupId #txtReservationGroupId="ngModel" required
+                                maxlength="30">
                         </div>
                     </div>
-                    <div class="form-group row mb-3"> 
+                    <div class="form-group row mb-3">
                         <div class="col col-sm-6">
                             <label for="selBeginDate" class="col-sm-12 col-form-label">Fecha de inicio:</label>
                             <div class="col-sm-12">
                                 <div class="input-group">
-                                    <input
-                                        class="form-control"
-                                        placeholder="yyyy-mm-dd"
-                                        name="selBeginDate"
-                                        [(ngModel)]="reservation.beginDate"
-                                        ngbDatepicker
-                                        #d="ngbDatepicker"
-                                    />
-                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button"></button>
+                                    <input class="form-control" placeholder="yyyy-mm-dd" name="selBeginDate"
+                                        [(ngModel)]=reservation.beginDate ngbDatepicker #d="ngbDatepicker" />
+                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
+                                        type="button"></button>
                                 </div>
                             </div>
                         </div>
@@ -34,86 +32,98 @@
                             <label for="selEndDate" class="col-sm-12 col-form-label">Fecha de fin:</label>
                             <div class="col-sm-12">
                                 <div class="input-group">
-                                    <input
-                                        class="form-control"
-                                        placeholder="yyyy-mm-dd"
-                                        name="selEndDate"
-                                        [(ngModel)]="reservation.endDate"
-                                        ngbDatepicker
-                                        #c="ngbDatepicker"
-                                    />
-                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="c.toggle()" type="button"></button>
+                                    <input class="form-control" placeholder="yyyy-mm-dd" name="selEndDate"
+                                        [(ngModel)]=reservation.endDate ngbDatepicker #c="ngbDatepicker" />
+                                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="c.toggle()"
+                                        type="button"></button>
                                 </div>
                             </div>
-                        </div>                     
+                        </div>
                     </div>
-                    <div class="form-group row mb-3">       
+                    <div class="form-group row mb-3">
                         <div class="col col-sm-6">
                             <label for="selBeginTime" class="col-sm-12 col-form-label">Hora de inicio:</label>
                             <div class="col-sm-9">
-                                <ngb-timepicker id="selBeginTime" [(ngModel)]="reservation.beginDateTime" name="selBeginTime"></ngb-timepicker>
+                                <ngb-timepicker id="selBeginTime" [(ngModel)]=reservation.startDateTime
+                                    name="selBeginTime"></ngb-timepicker>
                             </div>
                         </div>
                         <div class="col col-sm-6">
                             <label for="selEndTime" class="col-sm-12 col-form-label">Hora de fin:</label>
                             <div class="col-sm-9">
-                                <ngb-timepicker id="selEndTime" [(ngModel)]="reservation.endDateTime" name="selEndTime"></ngb-timepicker>
+                                <ngb-timepicker id="selEndTime" [(ngModel)]=reservation.endDateTime
+                                    name="selEndTime"></ngb-timepicker>
                             </div>
-                        </div>                     
+                        </div>
                     </div>
-                    <div class="form-group row mb-3">                            
+                    <div class="form-group row mb-3">
                         <label for="txtMotive" class="col-sm-3 col-form-label">Motivo:
                             <span class="text-danger form-check-inline" *ngIf="txtMotive?.errors?.required"> *</span>
                         </label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="txtMotive" autocomplete="off" placeholder="Motivo" name="txtMotive"
-                                [(ngModel)]="reservation.motive" #txtMotive="ngModel" required maxlength="30">
+                            <input type="text" class="form-control" id="txtMotive" autocomplete="off"
+                                placeholder="Motivo" name="txtMotive" [(ngModel)]=reservation.motive
+                                #txtMotive="ngModel" required maxlength="30">
                         </div>
                     </div>
-                    <div class="form-group row mb-3">                            
-                        <label for="selApprovalState" class="col-sm-3 col-form-label">Estado:
-                        </label>
-                            <div class="col-sm-9">
-                                <ng-select 
-                                [items]="approvalStatus"
-                                id="selApprovalState"
-                                name="selApprovalState"
-                                bindLabel="value"
-                                bindValue="key"
-                                placeholder="type to search"
-                                [(ngModel)]="approvalStatus">
+                    <div class="form-group row mb-3">
+                        <label for="selApprovalState" class="col-sm-3 col-form-label">Estado:</label>
+                        <div class="col-sm-9">
+                            <ng-select [items]="approvalStatus" id="selApprovalState" name="selApprovalState"
+                                bindLabel="value" bindValue="key" placeholder="type to search"
+                                [(ngModel)]=this.selectedState>
                             </ng-select>
                         </div>
                     </div>
-                    <div class="form-group row mb-3">                            
+                    <div class="form-group row mb-3">
                         <label for="txtNotes" class="col-sm-3 col-form-label">Notas:
-                            <span class="text-danger form-check-inline" *ngIf="txtNotes?.errors?.required"> *</span>
                         </label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="txtNotes" autocomplete="off" placeholder="Notas" name="txtNotes"
-                                [(ngModel)]="reservation.motive" #txtNotes="ngModel" required maxlength="120">
+                            <input type="text" class="form-control" id="txtNotes" autocomplete="off" placeholder="Notas"
+                                name="txtNotes" [(ngModel)]=reservation.notes #txtNotesReq="ngModel"
+                                maxlength="120">
                         </div>
                     </div>
-                    <div class="form-group row mb-3">                            
+                    <div class="form-group row mb-3">
                         <label for="selRoom" class="col-sm-3 col-form-label">Salas:
                         </label>
-                            <div class="col-sm-9">
-                                <ng-select 
-                                [items]="rooms"
-                                id="selRoom"
-                                name="selRoom"
-                                bindLabel="name"
-                                bindValue="roomUuid"
+                        <div class="col-sm-9">
+                            <ng-select [items]="rooms" id="selRoom" name="selRoom" bindLabel="name" bindValue="roomUuid" [(ngModel)]="selectedRoom"
                                 placeholder="type to search">
                             </ng-select>
                         </div>
                     </div>
+                    <div class="form-group row mb-3">
+                        <label for="selResource" class="col-sm-3 col-form-label">Recursos:</label>
+                        <div class="col-sm-9">
+                            <ng-select [items]="resources" name="selResources" [multiple]=true bindLabel="name"
+                                bindValue="resourceUuid" [hideSelected]="true" [(ngModel)]="selectedResources">
 
-                    <button class="btn btn-primary mr-2  me-2 float-left">{{ isUpdate ? "Actualizar" : "Guardar" }}</button>
+                                <ng-template ng-label-tmp let-item="item" let-clear="clear">
+                                    <span class="ng-value-label">{{item.name}}</span>
+                                    <span class="ng-value-icon right" (click)="clear(item)" aria-hidden="true">×</span>
+                                </ng-template>
+
+                                <ng-template ng-option-tmp let-item="item">
+                                    {{item.name}}
+                                </ng-template>
+                            </ng-select>
+                        </div>
+
+                        <!--<div class="mt-2">
+                          <p class="text-muted">Selected items:</p>
+                          <ul>
+                            <li *ngFor="let item of selectedResources">{{item}}</li>
+                          </ul>
+                        </div>-->
+
+                    </div>
+                    <button class="btn btn-primary mr-2  me-2 float-left" [disabled]="txtReservationGroupId?.errors?.required || txtMotive?.errors?.required"
+                            (click)="saveOrUpdate()">{{ isUpdate ? "Actualizar" : "Crear" }}</button>
+                    <button class="btn btn-secondary mr-2 me-2 float-right" [hidden]="!isUpdate" (click)="showDeleteConfirmation()">Eliminar</button>
                     <button class="btn btn-light mr-2  me-2" (click)="navigateToCalendar()">Cancelar</button>
                 </div>
             </div>
         </div>
     </div>
 </form>
-
