--- a/frontend/src/app/modules/reservation/reservation-detail/reserve-detail.component.html
+++ b/frontend/src/app/modules/reservation/reservation-detail/reserve-detail.component.html
@@ -12,7 +12,7 @@
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="txtReservationGroupId" autocomplete="off"
                                 placeholder="Identificador de grupo" name="txtReservationGroupId"
-                                [(ngModel)]=reservation.groupId #txtReservationGroupId="ngModel" required
+                                [(ngModel)]=reservation.reservationGroupUuid #txtReservationGroupId="ngModel" required
                                 maxlength="30">
                         </div>
                     </div>
