room availability development progress

--- a/frontend/src/app/modules/admin/room/room-list/room-list.component.html
+++ b/frontend/src/app/modules/admin/room/room-list/room-list.component.html
@@ -22,7 +22,7 @@
                             <th>Código</th>
                             <th>Nombre</th>
                             <th>Ubicación</th>
-                            <th>Estado</th>
+                            <th>Inactivo</th>
                             <th>Capacidad</th>
                             <th></th>
                         </tr>
