--- a/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
@@ -1,4 +1,4 @@
-<form novalidate name="frmNewUser">
+<form novalidate name="frmRoomAvailability">
     <div class="row">
         <div class="col-md-12 grid-margin stretch-card">
             <div class="card">
@@ -57,6 +57,15 @@
                                 &nbsp;Es privado
                             </label>
                         </div>
+                    </div>
+                    <div class="form-group row mb-3">   
+                        <ngb-accordion [closeOthers]="true" activeIds="availabilityPeriod" [class.collapsed]="true">
+                            <ngb-panel id="availabilityPeriod" title="Periodo de Disponibilidad">
+                              <ng-template ngbPanelContent>
+                                <app-room-availability-period-list></app-room-availability-period-list>
+                              </ng-template>
+                            </ngb-panel>
+                          </ngb-accordion>
                     </div>
                 </div>
             </div>
