--- a/frontend/src/app/modules/admin/room/room-availability-period-list/room-availability-period-list.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability-period-list/room-availability-period-list.component.html
@@ -1,6 +1,6 @@
 <div class="row grid-margin">
     <div class="row">
-        <app-room-availability-period (objectEmitter)="handleObject($event)"></app-room-availability-period>
+        <app-room-availability-period (availabilityPeriodEmitter)="savePeriod($event)" [roomAvailabilityId]="roomAvailabilityId"></app-room-availability-period>
     </div>
     <div class="row">
         <hr>
@@ -9,7 +9,7 @@
     </div>  
     <div class="row">
         <div class="table-responsive">
-            <table id="availabilityPeriodDataTable" class="table table-hover">
+            <table id="availabilityPeriodDataTable" class="table table-hover table-container">
                 <thead>
                 <tr>
                     <th>Día de la Semana</th>
