--- a/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
@@ -4,19 +4,19 @@
             <div class="card">
                 <div class="card-body">
                     <div class="form-group row mb-3">                            
-                        <label for="txtMinReservationTime" class="col-sm-3 col-form-label">Tiempo mínimo de reserva:
+                        <label for="txtMinReservationTime" class="col-sm-4 col-form-label">Tiempo mínimo de reserva:
                             <span class="text-danger form-check-inline" *ngIf="txtMinReservationTimeReq?.errors?.required"> *</span>
                         </label>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                             <input type="text" class="form-control" id="txtMinReservationTime" placeholder="Tiempo en segundos" name="txtMinReservationTime"
                             [(ngModel)]="roomAvailability.minReservationTime" #txtMinReservationTimeReq="ngModel" required maxlength="14" minlength="1">
                         </div>
                     </div>
                     <div class="form-group row mb-3">                            
-                        <label for="txtMaxReservationTime" class="col-sm-3 col-form-label">Tiempo mínimo de reserva:
+                        <label for="txtMaxReservationTime" class="col-sm-4 col-form-label">Tiempo máximo de reserva:
                             <span class="text-danger form-check-inline" *ngIf="txtMaxReservationTimeReq?.errors?.required"> *</span>
                         </label>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                             <input type="text" class="form-control" id="txtMaxReservationTime" placeholder="Tiempo en segundos" name="txtMaxReservationTime"
                             [(ngModel)]="roomAvailability.maxReservationTime" #txtMaxReservationTimeReq="ngModel" required maxlength="14" minlength="1">
                         </div>
@@ -26,13 +26,13 @@
                         <div class="col col-sm-6">
                             <label for="selBeginTime" class="col-sm-12 col-form-label">Inicio de disponibilidad:</label>
                             <div class="col-sm-9">
-                                <ngb-timepicker id="selBeginTime" [(ngModel)]="roomAvailability.startDate" name="selBeginTime"></ngb-timepicker>
+                                <ngb-timepicker id="selBeginTime" [(ngModel)]="roomAvailability.startDateTime" name="selBeginTime"></ngb-timepicker>
                             </div>
                         </div>
                         <div class="col col-sm-6">
                             <label for="selEndTime" class="col-sm-12 col-form-label">Fin de disponibilidad:</label>
                             <div class="col-sm-9">
-                                <ngb-timepicker id="selEndTime" [(ngModel)]="roomAvailability.endDate" name="selEndTime"></ngb-timepicker>
+                                <ngb-timepicker id="selEndTime" [(ngModel)]="roomAvailability.endDateTime" name="selEndTime"></ngb-timepicker>
                             </div>
                         </div>                     
                     </div>
@@ -52,17 +52,17 @@
                             <span></span>
                         </label>                           
                         <div class="col-sm-9">
-                            <input type="checkbox" class="form-check-input" id="chkIsPrivate" [(ngModel)]="roomAvailability.private" name="private">
+                            <input type="checkbox" class="form-check-input" id="chkIsPrivate" [(ngModel)]="roomAvailability.privateReservationEnabled" name="private">
                             <label class="form-check-label" for="chkIsPrivate">
                                 &nbsp;Es privado
                             </label>
                         </div>
                     </div>
-                    <div class="form-group row mb-3">   
+                    <div class="form-group row mb-3" >   
                         <ngb-accordion [closeOthers]="true" activeIds="availabilityPeriod" [class.collapsed]="true">
-                            <ngb-panel id="availabilityPeriod" title="Periodo de Disponibilidad">
+                            <ngb-panel id="availabilityPeriod" title="Periodo de Disponibilidad" [disabled]="accordionDisabled">
                               <ng-template ngbPanelContent>
-                                <app-room-availability-period-list [roomAvailabilityId]="roomAvailabilityId" [availabilityPeriodId]="availabilityPeriodId" [roomAvailability]="roomAvailability"></app-room-availability-period-list>
+                                <app-room-availability-period-list [roomAvailabilityId]="roomAvailabilityId" [roomId]="roomId" [roomAvailability]="roomAvailability"></app-room-availability-period-list>
                               </ng-template>
                             </ngb-panel>
                           </ngb-accordion>
