room availability development progress (Availability Periods)

--- a/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
@@ -26,13 +26,13 @@
                         <div class="col col-sm-6">
                             <label for="selBeginTime" class="col-sm-12 col-form-label">Inicio de disponibilidad:</label>
                             <div class="col-sm-9">
-                                <ngb-timepicker id="selBeginTime" [(ngModel)]="roomAvailability.startDateTime" name="selBeginTime"></ngb-timepicker>
+                                <ngb-timepicker id="selBeginTimeAvailability" [(ngModel)]="roomAvailability.startDateTime" name="selBeginTimeAvailability"></ngb-timepicker>
                             </div>
                         </div>
                         <div class="col col-sm-6">
                             <label for="selEndTime" class="col-sm-12 col-form-label">Fin de disponibilidad:</label>
                             <div class="col-sm-9">
-                                <ngb-timepicker id="selEndTime" [(ngModel)]="roomAvailability.endDateTime" name="selEndTime"></ngb-timepicker>
+                                <ngb-timepicker id="selEndTimeAvailability" [(ngModel)]="roomAvailability.endDateTime" name="selEndTimeAvailability"></ngb-timepicker>
                             </div>
                         </div>                     
                     </div>
