room availability development progress (Availability Periods)

--- a/frontend/src/app/modules/admin/room/room-detail/room-detail.component.html
+++ b/frontend/src/app/modules/admin/room/room-detail/room-detail.component.html
@@ -50,7 +50,7 @@
                         </label>
                         <div class="col-sm-9">
                         <input type="text" class="form-control" id="txtCapacity" autocomplete="off" placeholder="Capacidad" name="txtCapacity"
-                                [(ngModel)]="room.capacity" #txtCapacityReq="ngModel" required maxlength="10">
+                                [(ngModel)]="room.capacity" #txtCapacityReq="ngModel" required mask="00000">
                         </div>
                     </div>
 
