--- a/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
@@ -9,7 +9,7 @@
                         </label>
                             <div class="col-sm-8">
                             <input type="text" class="form-control" id="txtMinReservationTime" placeholder="Tiempo en segundos" name="txtMinReservationTime"
-                            [(ngModel)]="roomAvailability.minReservationTime" #txtMinReservationTimeReq="ngModel" required maxlength="14" minlength="1">
+                            [(ngModel)]="roomAvailability.minReservationTime" #txtMinReservationTimeReq="ngModel" required mask="00000">
                         </div>
                     </div>
                     <div class="form-group row mb-3">                            
@@ -18,7 +18,7 @@
                         </label>
                             <div class="col-sm-8">
                             <input type="text" class="form-control" id="txtMaxReservationTime" placeholder="Tiempo en segundos" name="txtMaxReservationTime"
-                            [(ngModel)]="roomAvailability.maxReservationTime" #txtMaxReservationTimeReq="ngModel" required maxlength="14" minlength="1">
+                            [(ngModel)]="roomAvailability.maxReservationTime" #txtMaxReservationTimeReq="ngModel" required mask="00000">
                         </div>
                     </div>
                     
